--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Amado features a great selection of sofas, chairs, beds, and can help you with your home design and decorating. Fashion Furniture offers great quality furniture, at a low price to the Fresno, Madera area."
+    />
+    <meta
+      name="keywords"
+      content="Features, Sofas, Chairs, Beds, Tables, Pillows, Home Deco, "
+    />
+    <meta name="google" content="notranslate" />
+    <meta name="author" content="boomga-liu" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
