--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Amado</title>
+    <title>Amado - Furniture</title>
   </head>
   <body>
     <noscript>
